--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,197 @@
+Fri Jul 15 20:22:00 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/general.c:
+
+	Include own header.  
+
+Fri Jul 15 20:17:24 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/: viewer/text/form.c, document/document.c,
+	document/options.c, document/options.h, document/dom/renderer.c,
+	document/html/parser.c, document/html/renderer.c,
+	document/html/parser/forms.c, document/html/parser/parse.c,
+	document/plain/renderer.c, intl/charsets.c, intl/charsets.h,
+	session/task.c:
+
+	Pass convert_string the codepage so that it needn't use
+	global_doc_opts to get it.  
+	
+	Drop global_doc_opts.  
+
+Fri Jul 15 19:53:40 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/: css/apply.c, html/parser.c, html/parser/forms.c,
+	html/parser/general.c, html/parser/link.c, html/parser/parse.c,
+	html/parser/parse.h, html/parser/stack.c, html/parser/table.c:
+
+	Pass document_options to get_attr_value and its wrappers:
+	get_attr_val, get_url_val, and has_attr_val.  
+
+Fri Jul 15 19:31:52 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/: parser.c, parser/forms.c, parser/general.c,
+	parser/parse.c, parser/parse.h, parser/table.c:
+
+	Pass get_num the document_options.  
+
+Fri Jul 15 19:27:58 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/: parser.c, parser/parse.c, parser/parse.h:
+
+	Pass scan_http_equiv the document_options.  
+
+Fri Jul 15 19:23:52 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/table.c:
+
+	Pass get_align the html_context.  
+
+Fri Jul 15 19:22:23 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/table.c:
+
+	Pass get_valign the html_context.  
+
+Fri Jul 15 19:20:54 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/table.c:
+
+	Pass the html_context to set_table_frame.  
+
+Fri Jul 15 19:19:43 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/table.c:
+
+	Pass the html_context to set_table_rules.  
+
+Fri Jul 15 19:18:20 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser.c:
+
+	Pass struct document_options *options to look_for_map.  
+
+Fri Jul 15 19:17:08 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/link.c:
+
+	Pass the html_context to html_link_parse.  
+
+Fri Jul 15 19:16:13 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/forms.c:
+
+	Pass the html_context to get_form_mode.  
+
+Fri Jul 15 19:14:58 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/css/apply.c:
+
+	Pass the html_context to examine_element.  
+
+Fri Jul 15 19:11:10 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/: css/apply.c, css/apply.h, html/parser/parse.c:
+
+	Pass the html_context to get_css_selector_for_element.  
+
+Fri Jul 15 18:49:33 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/forms.c:
+
+	Make get_form_mode static.  
+
+Fri Jul 15 13:51:53 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Polish translation improvements.  
+
+Fri Jul 15 13:48:03 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/osdep/unix/unix.c:
+
+	init_mouse and done_mouse are not used outside unix.c (this file
+	ought to be named gpm.c or linux.c), so make them static.  
+
+Fri Jul 15 04:37:55 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/: Makefile.am, html/parser.c, html/parser.h,
+	html/parser/Makefile.am, html/parser/general.c,
+	html/parser/general.h, html/parser/parse.c:
+
+	Move element handlers from parser.c to parser/general.c.  
+	
+	Export get_color from parser.c for parser/general.c.  
+
+Fri Jul 15 03:51:52 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser.c:
+
+	Add some inclusions.  
+
+Fri Jul 15 03:50:27 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser.c:
+
+	Drop some unnecessary inclusions.  
+
+Fri Jul 15 02:47:19 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/parse.c:
+
+	Rename the nopair member of struct element_info to type and change
+	its type from int to the new enum element_type.  
+
+Fri Jul 15 02:38:11 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/parse.c:
+
+	Use spaces instead of tabs for alignment in the elements table and
+	make sure that everything is aligned.  
+
+Fri Jul 15 02:22:33 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/terminal/kbd.c:
+
+	Mark disable_mouse and enable_mouse static.  
+
+Fri Jul 15 02:20:12 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/terminal/kbd.c:
+
+	Use disable_mouse and enable_mouse instead of unhandle_mouse and 
+	handle_mouse, respectively, in free_trm and handle_trm,
+	respectively.  
+
+Fri Jul 15 02:15:40 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/terminal/kbd.c:
+
+	Set the mouse_enable boolean in disable_mouse and enable_mouse
+	instead of in send_mouse_done_sequence and send_mouse_init_sequence.  
+
+Fri Jul 15 02:14:16 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/terminal/kbd.c:
+
+	Factor disable_mouse and enable_mouse out of toggle_mouse.  
+
+Fri Jul 15 02:13:07 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/action.c:
+
+	Handle ACT_MAIN_TOGGLE_MOUSE in do_action (doh!).  
+
+Fri Jul 15 02:12:03 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/kbdbind.c:
+
+	In keybinding_is_default, give memcmp the correct size.  This fixes
+	a mix-up from revision 1.336, 'Use the name keybinding for struct
+	keybinding.', and fixes a bug reported by Neuromancer whereby some
+	keybindings were not saved to the configuration file when they
+	should have been.  
+
 Tue Jul 12 19:49:18 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
 
 	* src/config/options.c:
