--- a/po/pl.po
+++ b/po/pl.po
@@ -1964,13 +1964,15 @@ msgid ""
 "     CHANGED during this ELinks session are added at the end of\n"
 "     the file"
 msgstr ""
-"Decyduje o sposobie zapisu, gdy wybrane zostanie \"Zapisz ustawienia\":\n"
+"Decyduje o sposobie zapisu, gdy wybrane zostanie \"Zapisz\n"
+"ustawienia\":\n"
 "0 - tylko warto¶ci bie¿±cych opcji s± zapisywane\n"
 "1 - warto¶ci bie¿±cych opcji i brakuj±ce opcje\n"
-"     s± dodawane na koniec pliku\n"
+"    s± dodawane na koniec pliku\n"
 "2 - plik konfiguracyjny jest zapisywany od zera\n"
 "3 - warto¶ci bie¿±cych opcji i brakuj±ce opcje\n"
-"     ZMIENIONE podczas tej sesji ELinksa s± dodawane na koñcu pliku"
+"    ZMIENIONE podczas tej sesji ELinksa s± dodawane\n"
+"    na koñcu pliku"
 
 #: src/config/options.inc:48
 msgid "Comments localization"
