--- a/po/pl.po
+++ b/po/pl.po
@@ -2786,10 +2786,11 @@ msgstr ""
 "Automatycznie pod±¿aj za podan± w dokumencie dyrektyw±\n"
 "refresh (tagi '<meta> refresh'). Autorzy stron u¿ywaj± jej\n"
 "do poinstruowania przegl±darki, ¿eby po danym okresie czasu\n"
-"prze³adowa³a dokument lub za³adowa³a inn± stronê. Niezale¿nie\n"
-"od warto¶ci od¶wie¿any URI jest dostêpny jako odno¶nik. U¿yj\n"
-"document.browse.minimum_refresh_time, aby kontrolowaæ\n"
-"minimaln± liczbê sekund oczekiwania na prze³adowanie strony."
+"prze³adowa³a dokument lub za³adowa³a inn± stronê.\n"
+"Niezale¿nie od warto¶ci od¶wie¿any URI jest dostêpny jako\n"
+"odno¶nik. U¿yj document.browse.minimum_refresh_time,\n"
+"aby kontrolowaæ minimaln± liczbê sekund oczekiwania\n"
+"na prze³adowanie strony."
 
 #: src/config/options.inc:436
 msgid "Document meta refresh minimum time"
