--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,89 @@
+Sun Jul 17 16:18:20 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Another reformatting.  
+
+Sun Jul 17 16:15:35 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Fixed formatting.  
+
+Sun Jul 17 16:10:17 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	More reformatting.  
+
+Sun Jul 17 16:05:08 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	More reformatting.  
+
+Sun Jul 17 16:02:20 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Text reformatted, adjusted to standard terminal width.  
+
+Sun Jul 17 15:12:00 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/cmdline.c:
+
+	-eval arguments are not system-wide configuration.  
+
+Sun Jul 17 14:36:54 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/config/cmdline.c:
+
+	Compilation fix. Is it correct? 
+
+Sun Jul 17 07:44:37 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/kbdbind.c:
+
+	Drop a comment that recent changes have rendered obsolete.  
+
+Sun Jul 17 07:43:10 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/: kbdbind.c, kbdbind.h:
+
+	Rename KBDB_DEFAULT to KBDB_DEFAULT_KEY.  
+
+Sun Jul 17 07:41:36 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/kbdbind.h:
+
+	Add a comment to enum kbdbind_flags for KBDB_DEFAULT_BINDING and
+	rewrite the comment for KBDB_DEFAULT.  
+
+Sun Jul 17 07:35:25 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/: config/conf.c, config/conf.h, config/kbdbind.c,
+	config/kbdbind.h, dialogs/exmode.c:
+
+	Let load_config_from pass a new is_system_conf flag to
+	load_config_file; down the call chain thru parse_config_command;
+	parse_config_file; load_config_file; the parse_handlers parse_set,
+	parse_unset, parse_include, and most importantly, parse_bind; and
+	ultimately to bind_do, which uses it to determine whether to set the
+	KBDB_DEFAULT_BINDING flag on new bindings.  
+	
+	This fixes a bug 661 so that bindings in system-wide configuration
+	files are not duplicated in the local configuration file when one
+	saves.  
+
+Sun Jul 17 07:25:59 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/config/: kbdbind.c, kbdbind.h:
+
+	Introduce the flag KBDB_DEFAULT_BINDING.  Set it in
+	add_default_keybindings.  Set it in add_keybinding if
+	keybinding_is_default.  Remove it in free_keybinding.  Use it
+	instead of keybinding_is_default in bind_config_string.  
+
 Sat Jul 16 21:57:26 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
 
 	* src/: session/history.c, session/history.h, util/lists.h,
