--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+Tue Jul 19 15:44:52 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: document/html/renderer.c, document/html/parser/general.c,
+	document/plain/renderer.c, protocol/bittorrent/bittorrent.c,
+	protocol/bittorrent/peerwire.c, protocol/bittorrent/piececache.c,
+	protocol/bittorrent/piececache.h, viewer/action.c:
+
+	Trim trailing spaces.  
+
+Tue Jul 19 08:25:54 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
+Tue Jul 19 07:59:19 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
 Mon Jul 18 16:08:02 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
 
 	* src/terminal/: kbd.c, kbd.h:
